4B/cs444/tests/a1/fail/Je_1_NonJoosConstructs_Types.java
public class Je_1_NonJoosConstructs_Types {
  double x;
  float y;
  long z;
}

